# Calculate

./: CMakeLists.txt  Calculate.desktop.in  README.md  config.h.in
api/: calculate.cpp  calculate.h
cmake/Modules/: FindSDL2_ttf.cmake
src/: main.cpp
